--- a/.gitignore
+++ b/.gitignore
@@ -338,3 +338,5 @@ ASALocalRun/
 
 # BeatPulse healthcheck temp database
 healthchecksdb
+/MediaCenter/Album/3276233540092_2920600881528155_4158685193274890047_n.jpg
+/MediaCenter/Album/Thumb_3276233540092_2920600881528155_4158685193274890047_n.jpg
