--- a/.gitignore
+++ b/.gitignore
@@ -340,3 +340,5 @@ ASALocalRun/
 healthchecksdb
 /MediaCenter/Album/3276233540092_2920600881528155_4158685193274890047_n.jpg
 /MediaCenter/Album/Thumb_3276233540092_2920600881528155_4158685193274890047_n.jpg
+/MediaCenter/Album/6625file_example_WMV_480_1_2MB.wmv
+/MediaCenter/Album/7829file_example_WMV_480_1_2MB.wmv
