--- a/Web.config
+++ b/Web.config
@@ -9,7 +9,7 @@
     <httpHandlers>
       <add verb="*" path="AjaxFileUploadHandler.axd" type="AjaxControlToolkit.AjaxFileUploadHandler,            AjaxControlToolkit"/>
     </httpHandlers>
-	  <customErrors mode ="Off"></customErrors>
+	  <customErrors mode ="On" defaultRedirect="~/Error.aspx" ></customErrors>
     <sessionState timeout="3600" useHostingIdentity="true"/>
     <compilation debug="true" targetFramework="4.5">
       <assemblies>
